<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="?attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true"
    app:cardElevation="1dp"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="3dp"
    android:layout_marginStart="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginLeft="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cell_product_root"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cell_product_iv"
            android:contentDescription="@string/act_detail_iv_content_description"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:transitionName="@string/transition_name_product_image"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cell_product_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_name_product_name"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="@string/sample_product_name"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:layout_constraintEnd_toStartOf="@+id/cell_product_iv_sale"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/cell_product_iv"/>

        <TextView
            android:id="@+id/cell_product_tv_price"
            android:transitionName="@string/transition_name_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_product_price"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cell_product_tv_only"
            app:layout_constraintStart_toStartOf="@id/cell_product_tv_name"
            app:layout_constraintEnd_toEndOf="@id/cell_product_tv_name"
            />

        <ImageView
            android:id="@+id/cell_product_iv_sale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/content_description_on_sale"
            android:visibility="invisible"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/icon_sale"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/cell_product_tv_only"
            android:textStyle="bold"
            android:text="@string/sample_only"
            android:textSize="8sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="@id/cell_product_tv_name"
            app:layout_constraintEnd_toEndOf="@id/cell_product_tv_name"
            app:layout_constraintTop_toBottomOf="@id/cell_product_tv_name"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_light"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
