<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/act_detail_iv"
        android:transitionName="product_image"
        android:background="@android:color/white"
        android:contentDescription="@string/act_detail_iv_content_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="350dp" />

    <TextView
        android:id="@+id/act_detail_tv_name"
        android:text="@string/sample_product_name"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:transitionName="product_name"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/act_detail_tv_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/act_detail_tv_regular_price"
        android:text="@string/sample_product_price"
        android:transitionName="product_price"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_detail_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/act_detail_tv_promotional_price"
        android:visibility="invisible"
        android:text="@string/sample_product_price"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_detail_tv_regular_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/act_detail_tv_sale"
        android:visibility="invisible"
        android:text="@string/act_detail_on_sale"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_detail_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/act_detail_tv_sizes"
        android:text="@string/act_detail_available_sizes"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_rectangle_transparent"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/act_detail_tv_promotional_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/act_detail_container_sizes"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/act_detail_tv_sizes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</android.support.constraint.ConstraintLayout>